chore: codebase cleanup, dead code removal, and security fixes
- Remove seed page and auto-promote admin email in AuthProvider
- Update Firestore rules for admin self-promotion
- Delete dead files: dataconnect-generated dirs, admin-reset, api/test dirs
- Delete duplicate /profile/requests route (kept /profile/item-requests)
- Delete unused context-menu.tsx component
- Fix ProductGrid TypeScript error (add missing infinite scroll props)
- Add force-dynamic to admin page for Next.js 16 compatibility
- Add command.tsx component (missing shadcn dependency)
- Fix admin settings JSX parse error (AlertDialogDescription tag)
- Add email utility, hooks, and ErrorBoundary component
- Update .gitignore to exclude test artifacts and AI dirs

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,17 @@ temp/
 # Generated files (if any)
 dist/
 build/
+
+# Playwright / Test artifacts
+test-results/
+playwright-report/
+test_*.png
+*.test.png
+
+# AI assistant directories
+.agent/
+.kimi/
+AGENTS.md
+
+# Junk files
+src/nul
